[build-system]
requires = ["setuptools", "wheel", "Cython"]

[project]
name = "http-router"
version = "5.0.5"
description = "A simple router system for HTTP applications"
readme = "README.rst"
requires-python = ">=3.9"
license = { "text" = "MIT License" }
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["http", "router", "web", "framework"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Cython",
  "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
homepage = "https://github.com/klen/http-router"
repository = "https://github.com/klen/http-router"
documentation = "https://github.com/klen/http-router"

[project.optional-dependencies]
tests = ["ruff", "pytest", "pytest-benchmark", "pytest-mypy; implementation_name == 'cpython'"]
dev = ["bump2version", "tox", "pre-commit"]

[tool.setuptools]
packages = ['http_router']

[tool.setuptools.package-data]
http_router = ["py.typed", "router.pxd", "router.pyx", "routes.pxd", "routes.pyx"]

[tool.pytest.ini_options]
addopts = "-xsv"
testpaths = "tests.py"

[tool.pylama]
ignore = "D"

[tool.mypy]
packages = ["http_router"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,py313,pypy310

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy

[testenv:pypy310]
deps = -e .[tests]
commands =
	pytest
"""

[tool.ruff]
fix = false
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "S101", "PLR2004"]
isort.required-imports = ["from __future__ import annotations"]
