[bumpversion]
commit = True
current_version = 1.1.3
files = http_router/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[metadata]
name = http-router
version = attr: http_router.__version__
url = https://github.com/klen/http-router
description = A simple router for HTTP applications
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = http, http router, paths management
project_urls = 
	Documentation = https://github.com/klen/http-router
	Source code = https://github.com/klen/http-router
	Issue tracker = https://github.com/klen/http-router/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP

[options]
packages = http_router
include_package_data = True
python_requires = >= 3.7

[options.package_data]
http_router = py.typed

[options.extras_require]
tests = 
	pytest
	pytest-mypy
build = 
	bump2version
	twine
	wheel

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[pylama]
ignore = D
