[bumpversion]
commit = True
current_version = 2.0.22
files = http_router/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[metadata]
name = http-router
version = attr: http_router.__version__
url = https://github.com/klen/http-router
description = A simple router for HTTP applications
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = http, http router, paths management
project_urls = 
	Documentation = https://github.com/klen/http-router
	Source code = https://github.com/klen/http-router
	Issue tracker = https://github.com/klen/http-router/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: PyPy
	Programming Language :: Cython
	Topic :: Internet :: WWW/HTTP

[options]
packages = http_router
include_package_data = True
python_requires = >= 3.7

[options.package_data]
http_router = 
	py.typed
	router.pxd
	router.pyx
	router.c
	routes.pxd
	routes.pyx
	routes.c

[options.extras_require]
tests = 
	pytest
	pytest-mypy; implementation_name == 'cpython'
	pytest-benchmark
build = 
	bump2version
	twine
	wheel

[pylama]
ignore = D

[tool:pytest]
addopts = -xsv

[tox:tox]
envlist = py37,py38,py39,pypy37

[testenv]
deps = -e .[tests]
commands = 
	pytest --mypy tests.py

[testenv:pypy37]
deps = -e .[tests]
commands = 
	pytest tests.py
